changed compiler to gcc in makefile

--- a/E1/makefile
+++ b/E1/makefile
@@ -1,4 +1,4 @@
-CC ?= clang # c-compiler
+CC ?= gcc # c-compiler
 CFLAGS = # compiler  flags  such as -O3
 LIBS = -lm -lgsl -lgslcblas  # libraries  such as -lm -lgsl -lgslcblas
 OBJECTS = E1code3.o fft.o # object  files  to  produce
