Created main varible in makefile and the pushclean-cmd

--- a/E1/makefile
+++ b/E1/makefile
@@ -1,8 +1,10 @@
+main = E1code4
+
 CC ?= gcc # c-compiler
 CFLAGS = # compiler  flags  such as -O3
 LIBS = -lm -lgsl -lgslcblas  # libraries  such as -lm -lgsl -lgslcblas
-OBJECTS = E1code4.o fft.o # object  files  to  produce
-PROGRAM = E1code4 # name of  executable  to be  built# build .o files
+OBJECTS = $(main).o fft.o # object  files  to  produce
+PROGRAM = $(main) # name of  executable  to be  built# build .o files
 %.o: %.c
 	$(CC) -c -o $@ $< $(CFLAGS)
 	# compile  program
@@ -12,5 +14,14 @@ $(PROGRAM): $(OBJECTS)
 
 clean:
 	rm -rf *.o
-	rm -rf *.exe
+	rm -rf $(main)
 	touch *.c
+
+pushclean:	
+	rm -rf *.o
+	rm -rf $(main)
+	rm -rf *.csv
+	rm -rf *.pdf
+	touch *.c
+	
+
